--- a/src/main/resources/templates/boardlist.html
+++ b/src/main/resources/templates/boardlist.html
@@ -29,11 +29,17 @@
                         <a th:text="${board.id}"></a>
                     </td>
                     <td>
-                            <a th:text="${board.title}" th:href="@{/board/view(id=${board.id})}"></a>
+                        <a th:text="${board.title}" th:href="@{/board/view(id=${board.id})}"></a>
                     </td>
                 </tr>
             </tbody>
         </table>
+
+        <th:block th:each="page : ${#numbers.sequence(startPage, endPage)}">
+            <a th:if="${page != nowPage}" th:href="@{/board/list(page = ${page - 1})}" th:text="${page}"></a>
+            <strong th:if="${page == nowPage}" th:text="${page}" style="color : red"></strong>
+        </th:block>
+
     </div>
 </body>
 </html>
