--- a/src/main/resources/templates/boardview.html
+++ b/src/main/resources/templates/boardview.html
@@ -8,7 +8,9 @@
 <h2 th:text="${board.id}">아이디</h2>
 <h1 th:text="${board.title}">제목</h1>
 <p th:text="${board.content}">내용</p>
-<a th:href="@{${board.filepath}}" download>다운받기</a>
+<th:block th:if="${board.filepath}">
+    <a th:href="@{${board.filepath}}" download>다운받기</a>
+</th:block>
 <a th:href="@{/board/delete(id=${board.id})}">글 삭제</a>
 <a th:href="@{/board/modify/{id}(id=${board.id})}">수정</a>
 </body>
